--- a/client/layouts/frontendLayouts/frontendLayout.html
+++ b/client/layouts/frontendLayouts/frontendLayout.html
@@ -6,6 +6,6 @@
         {{> Template.dynamic template=main}}
     </main>
     <footer>
-        {{> footer}}
+        {{> homeFooter}}
     </footer>
 </template>
