--- a/client/partials/sidebar.html
+++ b/client/partials/sidebar.html
@@ -1,12 +1,12 @@
-    <template name="sideBar">
+    <template name="sidebar">
       <!-- Left side column. contains the logo and sidebar -->
       <aside class="main-sidebar">
         <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
           <!-- Sidebar user panel -->
-          {{>sideBarUserPanel}}
+          {{> sideBarUserPanel}}
           <!-- search form -->
-          {{>searchForm}}
+          {{> searchForm}}
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
             <li class="header">MAIN NAVIGATION</li>
