--- a/client/partials/footer.html
+++ b/client/partials/footer.html
@@ -3,6 +3,8 @@
         <div class="pull-right hidden-xs">
           <b>Version</b> 2.3.0
         </div>
-        <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
+        <strong> {{{Config.footer}}} </strong> All rights reserved.
       </footer>
      </template>
+
+
