--- a/client/partials/homeFooter.html
+++ b/client/partials/homeFooter.html
@@ -49,7 +49,7 @@
         <div class="footer bg-dark ">
             <div class="container">
                 <div class="col-xs-12 col-sm-6 col-md-6 pull-left">
-                    <a href="/">{{{Config.footer}}}</a>
+                    <a href="/">{{Config.footer}}</a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-1">
                     <a href="/about">About</a>
