--- a/client/partials/topnav.html
+++ b/client/partials/topnav.html
@@ -9,21 +9,22 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/"><img src="/img/famous.png"> </a>
+                    <a class="navbar-brand" href="/"><img src="/img/Famous.png"> </a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a href="/about">About</a></li>
-                        <li><a href="/pricing">Pricing</a></li>
-                        <li><a href="/support">Support</a></li>
-                        <li><a href="/contact">Contact</a></li>
-                        <li><a href="/faq">FAQ</a></li>
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a href="about">About</a></li>
+                        <li><a href="pricing">Pricing</a></li>
+                        <li><a href="support">Support</a></li>
+                        <li><a href="contact">Contact</a></li>
+                        <li><a href="faq">FAQ</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">{{> loginButtons}}</a></li>
+                        <li><a> {{> loginButtons}} </a></li>
+                        <li><a></a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container -->
