--- a/client/partials/homeFooter.html
+++ b/client/partials/homeFooter.html
@@ -52,16 +52,16 @@
                     <a href="/">{{Config.footer}}</a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-1">
-                    <a href="/about">About</a>
+                    <a href="about">About</a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-1">
-                    <a href="/contact">Contact</a>
+                    <a href="contact">Contact</a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-1">
-                    <a href="/terms">Terms</a>
+                    <a href="terms">Terms</a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-1">
-                    <a href="/privacy">Privacy</a>
+                    <a href="privacy">Privacy</a>
                 </div>
             </div>
         </div>
