removed annoying console.log

--- a/client/partials/sidebar.html
+++ b/client/partials/sidebar.html
@@ -21,8 +21,8 @@
                 </li>
                 <li class="treeview">
                     <a href="#">
-                        <i class="fa fa-pie-chart"></i>
-                        <span>Charts</span>
+                        <i class="fa fa-th-list"></i>
+                        <span>Companies</span>
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
