--- a/client/styles/frontend.css
+++ b/client/styles/frontend.css
@@ -86,13 +86,25 @@
 /***********************************************************************
 *    1.   Body
 ***********************************************************************/
-
+.frontend {
+    background-color: lightgrey;
+}
 
 /***********************************************************************
-*    1.   Body
+*    1.   Footer
 ***********************************************************************/
-
-
+ .fa-facebook-square {
+     color: #3b5998 !important;
+ }
+.fa-twitter-square {
+    color: #4099FF !important;
+}
+.fa-google-plus-square {
+    color: #db4a39 !important;
+}
+.fa-pinterest-square {
+    color: #C92228 !important;
+}
 /***********************************************************************
 *    1.   Body
 ***********************************************************************/
