--- a/client/layouts/adminLayouts/adminLayout.html
+++ b/client/layouts/adminLayouts/adminLayout.html
@@ -1,5 +1,5 @@
 <template name="adminLayout">
-  <body class="hold-transition skin-blue sidebar-mini">
+  <body class="hold-transition skin-black sidebar-mini">
     <div class="wrapper">
 
       {{> topbar}}
