--- a/client/layouts/adminLayouts/loginLayout.html
+++ b/client/layouts/adminLayouts/loginLayout.html
@@ -1,15 +1,15 @@
 <template name="loginLayout">
-    <body class="hold-transition skin-blue sidebar-mini">
+    <body class="hold-transition skin-black sidebar-mini">
     <div class="wrapper">
 
         {{> topbar}}
+        <!-- Left side column. contains the logo and sidebar -->
         {{> sidebar}}
 
 
         <div class="content-wrapper">
             {{> Template.dynamic template=main}}
         </div>
-        {{> footer}}
 
     </div><!-- ./wrapper -->
 
