--- a/client/partials/sidebar.html
+++ b/client/partials/sidebar.html
@@ -1,4 +1,5 @@
 <template name="sidebar">
+{{#if currentUser}}
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
         <!-- sidebar: style can be found in sidebar.less -->
@@ -104,5 +105,16 @@
             </ul>
         </section>
         <!-- /.sidebar -->
+    </aside>
+{{else}}
+    {{> unloggedSidebar}}
+{{/if}}
+
+</template>
+
+
+
+<template name="unloggedSidebar">
+    <aside class="main-sidebar">
     </aside>
 </template>
