--- a/client/partials/topbar.html
+++ b/client/partials/topbar.html
@@ -1,4 +1,5 @@
 <template name="topbar">
+    {{#if currentUser}}
     <header class="main-header">
         <!-- Logo -->
         <a href="/" class="logo">
@@ -244,6 +245,41 @@
                     <li>
                         <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
                     </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    {{else}}
+        {{> loggedTopbar}}
+    {{/if}}
+
+</template>
+
+<template name="loggedTopbar">
+    <header class="main-header">
+        <!-- Logo -->
+        <a href="/" class="logo">
+            <!-- mini logo for sidebar mini 50x50 pixels -->
+            <span class="logo-mini"><b>A</b>LT</span>
+            <!-- logo for regular state and mobile devices -->
+            <span class="logo-lg"><img src="/img/famous.png"></span>
+        </a>
+        <!-- Header Navbar: style can be found in header.less -->
+        <nav class="navbar navbar-static-top" role="navigation">
+            <!-- Sidebar toggle button-->
+            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+                <span class="sr-only">Toggle navigation</span>
+            </a>
+            <div class="navbar-custom-menu container-fluid">
+                <ul class="nav navbar-nav navbar-right">
+
+                    <li>
+                        <a class="close-navbar" href="/sign-up">Sign up</a>
+                    </li>
+                    <li>
+                        <a class="close-navbar" href="/sign-in">Log in</a>
+                    </li>
+
                 </ul>
             </div>
         </nav>
