--- a/client/styles/admin.css
+++ b/client/styles/admin.css
@@ -26,14 +26,16 @@
 
 
 /***********************************************************************
-*    1.   Body
+*    1.   Header
 ***********************************************************************/
 
 
 /***********************************************************************
-*    1.   Body
+*    2.1  Navigation
 ***********************************************************************/
-
+.main-header {
+    line-height: inherit !important;
+}
 
 /***********************************************************************
 *    1.   Body
