--- a/client/partials/topbar.html
+++ b/client/partials/topbar.html
@@ -260,7 +260,7 @@
         <!-- Logo -->
         <a href="/" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>A</b>LT</span>
+            <span class="logo-mini"><img src="/img/famous5050.png"></span>
             <!-- logo for regular state and mobile devices -->
             <span class="logo-lg"><img src="/img/famous.png"></span>
         </a>
