--- a/client/styles/admin.css
+++ b/client/styles/admin.css
@@ -33,8 +33,8 @@
 /***********************************************************************
 *    2.1  Navigation
 ***********************************************************************/
-.main-header {
-    line-height: inherit !important;
+.main-header .logo {
+    line-height: 0px !important;
 }
 
 /***********************************************************************
