Login Page Styling
added some styling to login page; created signup and forgotten password

--- a/client/partials/topbar.html
+++ b/client/partials/topbar.html
@@ -277,7 +277,7 @@
                         <a class="close-navbar" href="/sign-up">Sign up</a>
                     </li>
                     <li>
-                        <a class="close-navbar" href="/sign-in">Log in</a>
+                        <a class="close-navbar" href="login">Login</a>
                     </li>
 
                 </ul>
