--- a/client/partials/sidebar.html
+++ b/client/partials/sidebar.html
@@ -32,20 +32,18 @@
                         <li><a href="/charts/flot"><i class="fa fa-circle-o"></i> Flot</a></li>
                         <li><a href="/charts/inline"><i class="fa fa-circle-o"></i> Inline charts</a></li>
                     </ul>
-                </li>
+                </li> <!--Companies-->
                 <li class="treeview">
                     <a href="#">
-                        <i class="fa fa-pie-chart"></i>
-                        <span>Charts</span>
+                        <i class="fa fa-envelope"></i>
+                        <span>Mailbox</span>
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="/charts/chartjs"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                        <li><a href="/charts/morris"><i class="fa fa-circle-o"></i> Morris</a></li>
-                        <li><a href="/charts/flot"><i class="fa fa-circle-o"></i> Flot</a></li>
-                        <li><a href="/charts/inline"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+                        <li><a href="mailbox"><i class="fa fa-circle-o"></i> Check Mail</a></li>
+                        <li><a href="mailbox-create"><i class="fa fa-circle-o"></i> Compose Mail</a></li>
                     </ul>
-                </li>
+                </li> <!--Mailbox-->
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-pie-chart"></i>
