--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,7 +1,7 @@
 <template name="login">
     <div class="container">
-        <div class="sign-box col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-            <div class="container" id="login-block">
+        <div class="sign-box ">
+            <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3" id="login-block">
                 <i class="user-img icons-faces-users-03"></i>
                 <div class="account-info">
                     <a href="dashboard.html" class="logo"></a>
