--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,19 +1,17 @@
 <template name="login">
     <div class="container">
-        <div class="sign-box col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-            <div class="container" id="login-block">
-                <i class="user-img icons-faces-users-03"></i>
-                <div class="account-info">
-                    <a href="dashboard.html" class="logo"></a>
+        <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+            <div class="box-danger">
+                <div class="account-info col-xs-3">
                     <h3>Modular &amp; Flexible Admin.</h3>
                     <ul>
-                        <li><i class="icon-magic-wand"></i> Fully customizable</li>
-                        <li><i class="icon-layers"></i> Various sibebars look</li>
-                        <li><i class="icon-arrow-right"></i> RTL direction support</li>
-                        <li><i class="icon-drop"></i> Colors options</li>
+                        <li><i class="fa fa-newspaper-o"></i> Fully customizable</li>
+                        <li><i class="fa fa-th-list"></i> Various sibebars look</li>
+                        <li><i class="fa fa-bars"></i> RTL direction support</li>
+                        <li><i class="fa fa-bookmark"></i> Colors options</li>
                     </ul>
                 </div>
-                <div class="account-form">
+                <div class="account-form col-xs-9">
                     <form class="form-signin" role="form">
                         <h3><strong>Sign in</strong> to your account</h3>
                         <div class="append-icon">
@@ -25,6 +23,7 @@
                             <i class="icon-lock"></i>
                         </div>
                         <button type="submit" id="submit-form" class="btn btn-lg btn-dark btn-rounded ladda-button" data-style="expand-left">Sign In</button>
+                        <br>
                         <span class="forgot-password"><a id="password" href="forgot">Forgot password?</a></span>
                         <div class="form-footer">
                             <div class="social-btn">
