--- a/client/partials/homeFooter.html
+++ b/client/partials/homeFooter.html
@@ -43,6 +43,8 @@
                     <a href="http://www.twitter.com"><i class="fa fa-twitter-square fa-3x"></i></a>
                     <a href="http://www.plus.google.com"><i class="fa fa-google-plus-square fa-3x"></i> </a>
                     <a href="http://www.pinterest.com"><i class="fa fa-pinterest-square fa-3x"></i> </a>
+                    <a href="http://www.piedpiper.com"><i class="fa fa-pied-piper fa-3x"></i> </a>
+                    <a href="http://www.youtube.com"><i class="fa fa-youtube-square fa-3x"></i> </a>
                 </div>
             </div>
         </div>
