--- a/client/partials/topnav.html
+++ b/client/partials/topnav.html
@@ -23,7 +23,7 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a> {{> loginButtons}} </a></li>
+                        <li><a class="btn btn-danger navbar-btn" href="login" role="button">Login or Sign Up</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container -->
