Working on accounts entry
Added working version of joshowens accounts-entry, trying to get it all
to work

--- a/client/partials/controlSideBar.html
+++ b/client/partials/controlSideBar.html
@@ -169,10 +169,12 @@
              immediately after the control sidebar -->
         <div class="control-sidebar-bg"></div>
     {{else}}
-        {{> unloggedContentHeader}}
+        {{> unloggedControlSideBar}}
     {{/if}}
 </template>
 
 <template name="unloggedControlSideBar">
+    <div>
 
+    </div>
 </template>
