--- a/client/styles/admin.css
+++ b/client/styles/admin.css
@@ -40,7 +40,12 @@
 /***********************************************************************
 *    1.   Body
 ***********************************************************************/
+/*To clear the padding on the login screen from the content header*/
 
+.content-header {
+    position: relative;
+    padding: 15px 15px 0 15px;
+}
 
 /***********************************************************************
 *    1.   Body
