--- a/client/partials/topbar.html
+++ b/client/partials/topbar.html
@@ -207,18 +207,18 @@
                     <li class="dropdown user user-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <img src="img/user2-160x160.jpg" class="user-image" alt="User Image">
-                            <span class="hidden-xs">Alexander Pierce</span>
+                            <span class="hidden-xs">{{currentUser._id}}</span>
                         </a>
                         <ul class="dropdown-menu">
                             <!-- User image -->
                             <li class="user-header">
                                 <img src="img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                 <p>
-                                    Alexander Pierce - Web Developer
-                                    <small>Member since Nov. 2012</small>
+                                    {{currentUser._id}}
+                                    <small>Member since {{currentUser.ISODate}}</small>
                                 </p>
                             </li>
-                            <!-- Menu Body -->
+                            <!--Menu Body
                             <li class="user-body">
                                 <div class="col-xs-4 text-center">
                                     <a href="#">Followers</a>
@@ -230,13 +230,14 @@
                                     <a href="#">Friends</a>
                                 </div>
                             </li>
-                            <!-- Menu Footer-->
+                             Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                    <a href="profile" class="btn btn-default btn-flat">Profile</a>
                                 </div>
-                                <div class="pull-right">
-                                    <a href="#" class="btn btn-default btn-flat">Sign out</a>
+
+                                <div class="pull-right login-button" id="login-buttons-logout">
+                                    <a href="login" class="btn btn-default btn-flat">Sign out</a>
                                 </div>
                             </li>
                         </ul>
@@ -274,7 +275,7 @@
                 <ul class="nav navbar-nav navbar-right">
 
                     <li>
-                        <a class="close-navbar" href="/sign-up">Sign up</a>
+                        <a class="close-navbar" href="signup">Sign up</a>
                     </li>
                     <li>
                         <a class="close-navbar" href="login">Login</a>
