FlowRouter Friendly Accounts Entry
Added several files from a merge with dovrosenberg

--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,4 +1,4 @@
-<template name="login">
+<template name="entrySignIn">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
@@ -56,7 +56,7 @@
     </div>
 </template>
 
-<template name="signup">
+<template name="entrySignUp">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
@@ -124,7 +124,7 @@
     </div>
 </template>
 
-<template name="forgot">
+<template name="entryForgotPassword">
     <div class="container">
         <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
             <form class="form-password" role="form">
