--- a/client/views/login.html
+++ b/client/views/login.html
@@ -19,10 +19,10 @@
                         {{/if}}
                     </div>
                 {{/if}}
-                <!--{{> entryError}}-->
+                {{> entryError}}
                 {{#unless otherLoginServices}}
                     <div class="email-option">
-                        <h3>Login -{{t9n "signIn"}}--></h3>
+                        <h3>{{t9n "signIn"}}</h3>
                     </div>
                 {{/unless}}
                 {{#if passwordLoginService}}
@@ -31,16 +31,16 @@
                             <input autofocus name="email" type="{{emailInputType}}" class="form-control" value='{{email}}' placeholder="{{emailPlaceholder}}" autocapitalize="none" autocomplete="off" autocorrect="off">
                         </div>
                         <div class="form-group">
-                            <input name="password" type="password" class="form-control" value='{{password}}' placeholder="Stuff{{t9n 'password'}}">
+                            <input name="password" type="password" class="form-control" value='{{password}}' placeholder="{{t9n 'password'}}">
                         </div>
                         {{#unless isUsernameOnly}}
-                            <p><a href="{{pathFor 'entryForgotPassword'}}"><!--{{t9n "forgotPassword"}}--></a></p>
-                            <button type="submit" class="submit btn btn-block btn-default">Login<!--{{t9n "signIn"}}--></button>
+                            <p><a href="forgot">{{t9n "forgotPassword"}}</a></p>
+                            <button type="submit" class="submit btn btn-block btn-default">{{t9n "signIn"}}</button>
                         {{/unless}}
                     </form>
                 {{/if}}
                 {{#if showCreateAccountLink}}
-                    <p class="entry-signup-cta"><!--{{t9n "dontHaveAnAccount"}}--> <a href="{{pathFor 'entrySignUp'}}"><!--{{t9n "signUp"}}--></a></p>
+                    <p class="entry-signup-cta">{{t9n "dontHaveAnAccount"}} <a href="signup">{{t9n "signUp"}}</a></p>
                 {{/if}}
                 {{#if talkingToServer}}
                     {{> spinner}}
@@ -51,88 +51,117 @@
 </template>
 
 <template name="signup">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-                <div class="account-wall">
-                    <form class="form-signup" action="dashboard.html" role="form">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="append-icon">
-                                    <input type="text" name="firstname" id="firstname" class="form-control form-white firstname" placeholder="First Name" required autofocus>
-                                    <i class="icon-user"></i>
-                                </div>
-                            </div> <!--First Name-->
-                            <div class="col-sm-6">
-                                <div class="append-icon">
-                                    <input type="text" name="lastname" id="lastname" class="form-control form-white lastname" placeholder="Last Name" required>
-                                    <i class="icon-user"></i>
-                                </div>
-                            </div> <!--Last Name-->
-                        </div>
-
-                        <div class="append-icon">
-                            <input type="email" name="email" id="email" class="form-control form-white email" placeholder="Email" required>
-                            <i class="icon-envelope"></i>
-                        </div> <!--Email -->
-                        <div class="append-icon">
-                            <input type="password" name="password" id="password" class="form-control form-white password" placeholder="Password" required>
-                            <i class="icon-lock"></i>
-                        </div> <!--Password-->
-                        <div class="append-icon m-b-20">
-                            <input type="password" name="password" id="password2" class="form-control form-white password2" placeholder="Repeat Password" required>
-                            <i class="icon-lock"></i>
-                        </div> <!--Password Verify-->
-
-                        <div class="terms option-group">
-                            <label  for="terms" class="m-t-10">
-                                <input type="checkbox" name="terms" id="terms" data-checkbox="icheckbox_square-blue" required/>
-                                I agree with terms and conditions
-                            </label>
-                        </div>
-
-                        <button type="submit" id="submit-form" class="btn btn-lg btn-dark m-t-20" data-style="expand-left">Register</button>
-
-                        <div class="social-auth-links">
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <button type="button" class="btn btn-lg btn-block btn-primary"><i class="fa fa-facebook pull-left"></i>Sign In with Facebook</button>
-                                </div>
-                                <div class="col-sm-6">
-                                    <button type="button" class="btn btn-lg btn-block btn-danger"><i class="fa fa-google pull-left"></i>Sign In with Google</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="clearfix">
-                            <p class="pull-right m-t-20"><a href="login">Already have an account? Sign In</a></p>
-                        </div>
-
-                    </form>
+    <div class="{{containerCSSClass}}">
+        <div class="{{rowCSSClass}}">
+            {{#if logo}}
+                <div class="entry-logo">
+                    <a href="/"><img src="{{logo}}" alt="logo"></a>
                 </div>
+            {{/if}}
+            <div class="entry col-md-4 col-md-offset-4">
+                <h3>{{t9n "createAccount"}}</h3>
+                {{#if otherLoginServices}}
+                    <p class="entry-signin-cta">{{t9n "ifYouAlreadyHaveAnAccount"}} <a href="entrySignIn">{{t9n "signin"}}</a>.</p>
+                    <div class="entry-social">
+                        {{#each loginServices}}
+                            {{> entrySocial}}
+                        {{/each}}
+                        {{#if passwordLoginService}}
+                            <div class="email-option">
+                                <strong class="line-thru">{{t9n "OR"}}</strong>
+                                <a data-toggle="collapse" href="#signUp">
+                                    {{t9n "signUpWithYourEmailAddress"}}
+                                </a>
+                            </div>
+                        {{/if}}
+                    </div>
+                {{else}}
+                    <p class="entry-signin-cta">{{t9n "ifYouAlreadyHaveAnAccount"}} <a href="entrySignIn">{{t9n "signin"}}</a>.</p>
+                {{/if}}
+                {{> entryError}}
+                {{#if passwordLoginService}}
+                    <form class="entry-form {{signupClass}}" id='signUp'>
+                        {{#if showUsername}}
+                            <div class="form-group">
+                                <label>{{t9n "username"}}</label>
+                                <input autofocus name="username" type="string" class="form-control" value=''  autocapitalize="none" autocomplete="off" autocorrect="off">
+                            </div>
+                        {{/if}}
+
+                        {{#if showEmail}}
+                            <div class="form-group">
+                                <label>{{t9n "emailAddress"}}</label>
+                                {{#if showUsername}}
+                                    <input type="email" class="form-control" value='{{emailAddress}}'  autocapitalize="none" autocomplete="off" autocorrect="off">
+                                {{else}}
+                                    <input autofocus type="email" class="form-control" value='{{emailAddress}}'  autocapitalize="none" autocomplete="off" autocorrect="off" >
+                                {{/if}}
+                            </div>
+                        {{/if}}
+
+                        <div class="form-group">
+                            <label>{{t9n "password"}}</label>
+                            <input type="password" class="form-control" value=''>
+                        </div>
+
+                        {{#if showSignupCode}}
+                            <div class="form-group">
+                                <label>{{t9n "signupCode"}}</label>
+                                <input name="signupCode" type="string" class="form-control" value=''  autocapitalize="none" autocomplete="off" autocorrect="off" >
+                            </div>
+                        {{/if}}
+
+                        {{> entryExtraSignUpFields}}
+                        <button type="submit" class="submit btn btn-block btn-default">{{t9n "signUp"}}</button>
+                    </form>
+                {{/if}}
+                {{#if both}}
+                    <p class="entry-agreement">{{t9n "clickAgree"}}
+                        <a href="{{privacyUrl}}">{{t9n "privacyPolicy"}}</a> {{t9n "and"}}
+                        <a href="{{termsUrl}}">{{t9n "terms"}}</a>.
+                    </p>
+                {{else}}
+                    {{#unless neither}}
+                        <p class="entry-agreement">{{t9n "clickAgree"}}
+                            {{#if privacyUrl}}<a href="{{privacyUrl}}">{{t9n "privacyPolicy"}}</a>.{{/if}}
+                            {{#if termsUrl}}<a href="{{termsUrl}}">{{t9n "terms"}}</a>.{{/if}}
+                        </p>
+                    {{/unless}}
+                {{/if}}
+                {{#if talkingToServer}}
+                    {{> spinner}}
+                {{/if}}
             </div>
         </div>
-        <p class="account-copyright">
-            <span>{{Config.footer}}</span>
-        </p>
     </div>
 </template>
 
 <template name="forgot">
-    <div class="container">
-        <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-            <form class="form-password" role="form">
-                <h3>Reset Password</h3>
-                <div class="append-icon m-b-20">
-                    <input type="password" name="password" class="form-control form-white password" placeholder="Password" required>
-                    <i class="icon-lock"></i>
+    <div class="{{containerCSSClass}}">
+        <div class="{{rowCSSClass}}">
+            {{#if logo}}
+                <div class="entry-logo">
+                    <a href="/"><img src="{{logo}}" alt="logo"></a>
                 </div>
-                <button type="submit" id="submit-password" class="btn btn-danger btn-block" data-style="expand-left">Reset Password</button>
-                <div class="clearfix">
-                    <p class="pull-left"><a id="login" href="login">Have an account? Login.</a></p>
-                    <p class="pull-right"><a href="signup">New here? Sign up.</a></p>
-                </div>
-            </form>
+            {{/if}}
+            <div class="entry col-md-4 col-md-offset-4">
+                {{#if error}}
+                    <div class='alert alert-danger'>{{error}}</div>
+                {{/if}}
+                <h3>{{t9n 'forgotPassword'}}</h3>
+                <form id='forgotPassword'>
+                    <div class="form-group">
+                        <input type="email" name="forgottenEmail" class="form-control" placeholder="{{t9n 'emailAddress'}}" value=''>
+                    </div>
+                    <button type="submit" class="btn btn-default">{{t9n 'emailResetLink'}}</button>
+                </form>
+                {{#if showSignupCode}}
+                    <p class="entry-signup-cta">{{t9n 'dontHaveAnAccount'}} <a href="entrySignUp">{{t9n 'signUp'}}</a></p>
+                {{/if}}
+                {{#if talkingToServer}}
+                    {{> spinner}}
+                {{/if}}
+            </div>
         </div>
     </div>
 </template>
