--- a/client/views/frontend/about.html
+++ b/client/views/frontend/about.html
@@ -1,3 +1,9 @@
 <template name="about">
-    <h1>About</h1>
+    <div class="content frontend">
+        <div class="box-title container">
+            <h1>About</h1>
+        </div>
+        <div class="contact container">
+        </div>
+    </div>
 </template>
