--- a/client/views/frontend/pricing.html
+++ b/client/views/frontend/pricing.html
@@ -1,3 +1,10 @@
 <template name="pricing">
-    <h1>Pricing</h1>
+
+    <div class="content frontend">
+        <div class="box-title container">
+            <h1>Pricing</h1>
+        </div>
+        <div class="contact container">
+        </div>
+    </div>
 </template>
