--- a/client/views/frontend/privacy.html
+++ b/client/views/frontend/privacy.html
@@ -1,5 +1,9 @@
 <template name="privacy">
-    <div>
-        <h1>Privacy</h1>
+    <div class="content frontend">
+        <div class="box-title container">
+            <h1>Privacy</h1>
+        </div>
+        <div class="contact container">
+        </div>
     </div>
 </template>
