--- a/client/views/frontend/support.html
+++ b/client/views/frontend/support.html
@@ -1,3 +1,10 @@
 <template name="support">
-    <h1>Support</h1>
+
+    <div class="content frontend">
+        <div class="box-title container">
+            <h1>Support</h1>
+        </div>
+        <div class="contact container">
+        </div>
+    </div>
 </template>
