--- a/client/views/frontend/home.html
+++ b/client/views/frontend/home.html
@@ -2,7 +2,7 @@
     <div class="filling">
         <section class="home-one">
             <div class="center-block container">
-                <h1>Home Page</h1>
+                <h1 class="text-center">Home Page</h1>
             </div>
         </section>
         <section class="home-two">
