--- a/client/views/404.html
+++ b/client/views/404.html
@@ -1,4 +1,4 @@
-<template name="404">
+<template name="notFound">
     <!-- Main content -->
     <section class="content">
         <div class="error-page">
@@ -7,7 +7,7 @@
                 <h3><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
                 <p>
                     We could not find the page you were looking for.
-                    Meanwhile, you may <a href="/">return to dashboard</a> or try using the search form.
+                    Meanwhile, you may <a href="dashboard">return to dashboard</a> or try using the search form.
                 </p>
                 <form class="search-form">
                     <div class="input-group">
