Logout button finally works

--- a/client/partials/topbar.html
+++ b/client/partials/topbar.html
@@ -237,7 +237,7 @@
                                 </div>
 
                                 <div class="pull-right login-button" id="login-buttons-logout">
-                                    <a href="login" class="btn btn-default btn-flat">Sign out</a>
+                                    <a id="logout" href="login" class="btn btn-default btn-flat">Sign out</a>
                                 </div>
                             </li>
                         </ul>
