--- a/client/styles/admin.css
+++ b/client/styles/admin.css
@@ -51,6 +51,10 @@
 *    1.   Body
 ***********************************************************************/
 
+.accounts-box {
+    background-color: white;
+    padding: 30px 15px;
+}
 
 /***********************************************************************
 *    1.   Body
