--- a/client/views/accountButtons.html
+++ b/client/views/accountButtons.html
@@ -1,20 +1,20 @@
 <template name="entryAccountButtons">
-  {{#if currentUser}}
-    {{> signedInTemplate}}
-  {{else}}
+    {{#if currentUser}}
+        {{> signedInTemplate}}
+    {{else}}
 
-    {{#wrapLinksLi}}
-      <a href="{{pathFor 'entrySignIn'}}">{{{beforeSignIn}}}{{t9n "signIn"}}</a>
-    {{/wrapLinksLi}}
+        {{#wrapLinksLi}}
+            <a href="entrySignIn">{{{beforeSignIn}}}{{t9n "signIn"}}</a>
+        {{/wrapLinksLi}}
 
-    {{#unless wrapLinks}}
-      <span>or</span>
-    {{/unless}}
+        {{#unless wrapLinks}}
+            <span>or</span>
+        {{/unless}}
 
-    {{#if showCreateAccountLink}}
-      {{#wrapLinksLi}}
-        <a href="{{entrySignUp}}">{{{beforeSignUp}}}{{t9n "signUp"}}</a>
-      {{/wrapLinksLi}}
+        {{#if showCreateAccountLink}}
+            {{#wrapLinksLi}}
+                <a href="entrySignUp">{{{beforeSignUp}}}{{t9n "signUp"}}</a>
+            {{/wrapLinksLi}}
+        {{/if}}
     {{/if}}
-  {{/if}}
 </template>
