--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,109 +1,117 @@
 <template name="login">
-    <div class="{{containerCSSClass}}">
-        <div class="{{rowCSSClass}}">
-            {{> loginButtons}}
+    <div class="accounts-box col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+        {{> loginButtons}}
 
-            {{#if logo}}
-                <div class="entry-logo">
-                    <a href="/"><img src="{{logo}}" alt="logo"></a>
-                </div>
-            {{/if}}
-            <div class="entry col-md-4 col-md-offset-4">
-                <h3>{{t9n "signInAccount"}}</h3>
-                {{#if otherLoginServices}}
-                    <div class="entry-social">
-                        {{#each loginServices}}
-                            {{> entrySocial}}
-                        {{/each}}
-                        {{#if passwordLoginService}}
-                            <div class="email-option">
-                                <strong class="line-thru or-sign-in">{{t9n "OR"}}</strong>
-                            </div>
-                        {{/if}}
-                    </div>
-                {{/if}}
-                {{> entryError}}
-                {{#unless otherLoginServices}}
-                    <div class="email-option">
-                        <h3>{{t9n "signIn"}}</h3>
-                    </div>
-                {{/unless}}
-                {{#if passwordLoginService}}
-                    <form class="entry-form" id='signIn'>
-                        <div class="form-group">
-                            <input autofocus name="email" type="{{emailInputType}}" class="form-control" value='{{email}}' placeholder="{{emailPlaceholder}}" autocapitalize="none" autocomplete="off" autocorrect="off">
-                        </div>
-                        <div class="form-group">
-                            <input name="password" type="password" class="form-control" value='{{password}}' placeholder="{{t9n 'password'}}">
-                        </div>
-                        {{#unless isUsernameOnly}}
-                            <p><a href="forgot">{{t9n "forgotPassword"}}</a></p>
-                            <button type="submit" class="submit btn btn-block btn-default">{{t9n "signIn"}}</button>
-                        {{/unless}}
-                    </form>
-                {{/if}}
-                {{#if showCreateAccountLink}}
-                    <p class="entry-signup-cta">{{t9n "dontHaveAnAccount"}} <a href="signup">{{t9n "signUp"}}</a></p>
-                {{/if}}
-                {{#if talkingToServer}}
-                    {{> spinner}}
-                {{/if}}
+        {{#if logo}}
+            <div class="entry-logo">
+                <a href="/"><img src="{{logo}}" alt="logo"></a>
             </div>
+        {{/if}}
+
+        <div>
+            <h3 class="text-center">{{Accounts.signInAccount}}</h3>
+                <div class="entry-social">
+                    <div class="facebook">
+                        <button class="btn-block btn-facebook"><span><i class="fa fa-facebook pull-left"></i></span>Login with Facebook</button>
+                    </div>
+                    <div class="google">
+                        <button class="btn-block btn-google"><span><i class="fa fa-google pull-left"></i></span>Login with Google</button>
+                    </div>
+                    <div class="twitter">
+                        <button class="btn-block btn-twitter"><span><i class="fa fa-twitter pull-left"></i></span>Login with Twitter</button>
+                    </div>
+                    {{#each loginServices}}
+                        {{> entrySocial}}
+                    {{/each}}
+
+                        <div class="email-option">
+                            <strong class="line-thru or-sign-in">{{Accounts.OR}}</strong>
+                        </div>
+
+                     </div>
+
+            {{> entryError}}
+                <div class="email-option">
+                    <h3 class="text-center">{{Accounts.signIn}}</h3>
+                </div>
+            {{#if passwordLoginService}}
+                <form class="entry-form" id='signIn'>
+                    <div class="form-group">
+                        <input autofocus name="email" type="{{Accounts.emailInputType}}" class="form-control" value='{{Accounts.email}}' placeholder="{{Accounts.emailPlaceholder}}" autocapitalize="none" autocomplete="off" autocorrect="off">
+                    </div>
+                    <div class="form-group">
+                        <input name="password" type="password" class="form-control" value='{{Accounts.password}}' placeholder="{{Accounts.password}}">
+                    </div>
+                    {{#unless isUsernameOnly}}
+                        <p><a href="forgot">{{Accounts.forgotPassword}}</a></p>
+                        <button id="login" type="submit" class="submit btn btn-block btn-default">{{Accounts.signIn}}</button>
+                    {{/unless}}
+                </form>
+            {{/if}}
+
+            {{#if showCreateAccountLink}}
+                <p class="entry-signup-cta">{{Accounts.dontHaveAnAccount}} <a href="signup">{{Accounts.signUp}}</a></p>
+            {{/if}}
+
+            {{#if talkingToServer}}
+                {{> spinner}}
+            {{/if}}
         </div>
     </div>
 </template>
 
 <template name="signup">
-    <div class="{{containerCSSClass}}">
+    <div class="accounts-box col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <div class="{{rowCSSClass}}">
             {{#if logo}}
                 <div class="entry-logo">
                     <a href="/"><img src="{{logo}}" alt="logo"></a>
                 </div>
             {{/if}}
-            <div class="entry col-md-4 col-md-offset-4">
-                <h3>{{t9n "createAccount"}}</h3>
+
+            <div class="entry">
+                <h3>{{Accounts.createAccount}}</h3>
                 {{#if otherLoginServices}}
-                    <p class="entry-signin-cta">{{t9n "ifYouAlreadyHaveAnAccount"}} <a href="login">{{t9n "signin"}}</a>.</p>
+                    <p class="entry-signin-cta">{{Accounts.ifYouAlreadyHaveAnAccount}} <a href="login">{{Accounts.signin}}</a>.</p>
                     <div class="entry-social">
                         {{#each loginServices}}
                             {{> entrySocial}}
                         {{/each}}
                         {{#if passwordLoginService}}
                             <div class="email-option">
-                                <strong class="line-thru">{{t9n "OR"}}</strong>
-                                <a data-toggle="collapse" href="#signUp">
-                                    {{t9n "signUpWithYourEmailAddress"}}
+                                <strong class="line-thru">{{Accounts.OR}}</strong>
+                                <a data-toggle="collapse" href="login">
+                                    {{Accounts.signUpWithYourEmailAddress}}
                                 </a>
                             </div>
                         {{/if}}
                     </div>
                 {{else}}
-                    <p class="entry-signin-cta">{{t9n "ifYouAlreadyHaveAnAccount"}} <a href="entrySignIn">{{t9n "signin"}}</a>.</p>
+                    <p class="entry-signin-cta">{{Accounts.ifYouAlreadyHaveAnAccount}} <a href="login">{{Accounts.signin}}</a>.</p>
                 {{/if}}
                 {{> entryError}}
                 {{#if passwordLoginService}}
-                    <form class="entry-form {{signupClass}}" id='signUp'>
+                    <form class="entry-form {{Accounts.signupClass}}" id='signUp'>
                         {{#if showUsername}}
                             <div class="form-group">
-                                <label>{{t9n "username"}}</label>
+                                <label>{{Accounts.username}}</label>
                                 <input autofocus name="username" type="string" class="form-control" value='' autocapitalize="none" autocomplete="off" autocorrect="off">
                             </div>
                         {{/if}}
                         {{#if showEmail}}
                             <div class="form-group">
-                                <label>{{t9n "emailAddress"}}</label>
+                                <label>{{Accounts.emailAddress}}</label>
                                 {{#if showUsername}}
-                                    <input type="email" class="form-control" value='{{emailAddress}}'  autocapitalize="none" autocomplete="off" autocorrect="off">
+                                    <input type="email" class="form-control" value='{{Accounts.emailAddress}}'  autocapitalize="none" autocomplete="off" autocorrect="off">
                                 {{else}}
-                                    <input autofocus type="email" class="form-control" value='{{emailAddress}}'  autocapitalize="none" autocomplete="off" autocorrect="off" >
+                                    <input autofocus type="email" class="form-control" value='{{Accounts.emailAddress}}'  autocapitalize="none" autocomplete="off" autocorrect="off" >
                                 {{/if}}
                             </div>
                         {{/if}}
 
                         <div class="form-group">
-                            <label>{{t9n "password"}}</label>
-                            <input type="password" class="form-control" value=''>
+                            <label>{{Accounts.password}}</label>
+                            <input type="password" class="form-control" value="">
                         </div>
 
                         {{#if showSignupCode}}
@@ -114,22 +122,23 @@
                         {{/if}}
 
                         {{> entryExtraSignUpFields}}
-                        <button type="submit" class="submit btn btn-block btn-default">{{t9n "signUp"}}</button>
+                        <button type="submit" class="submit btn btn-block btn-default">{{Accounts.signUp}}</button>
                     </form>
                 {{/if}}
                 {{#if both}}
-                    <p class="entry-agreement">{{t9n "clickAgree"}}
-                        <a href="privacy">{{t9n "privacyPolicy"}}</a> {{t9n "and"}}
-                        <a href="terms">{{t9n "terms"}}</a>.
+                    <p class="entry-agreement">{{Accounts.clickAgree}}
+                        <a href="privacy">{{Accounts.privacyPolicy}}</a> {{Accounts.and}}
+                        <a href="terms">{{Accounts.terms}}</a>.
                     </p>
                 {{else}}
                     {{#unless neither}}
-                        <p class="entry-agreement">{{t9n "clickAgree"}}
-                            {{#if privacyUrl}}<a href="privacy">{{t9n "privacyPolicy"}}</a>.{{/if}}
-                            {{#if termsUrl}}<a href="terms">{{t9n "terms"}}</a>.{{/if}}
+                        <p class="entry-agreement">{{Accounts.clickAgree}}
+                            {{#if privacyUrl}}<a href="privacy">{{Accounts.privacyPolicy}}</a>.{{/if}}
+                            {{#if termsUrl}}<a href="terms">{{Accounts.terms}}</a>.{{/if}}
                         </p>
                     {{/unless}}
                 {{/if}}
+
                 {{#if talkingToServer}}
                     {{> spinner}}
                 {{/if}}
@@ -139,26 +148,30 @@
 </template>
 
 <template name="forgot">
-    <div class="{{containerCSSClass}}">
+    <div class="accounts-box col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <div class="{{rowCSSClass}}">
+
             {{#if logo}}
                 <div class="entry-logo">
                     <a href="/"><img src="{{logo}}" alt="logo"></a>
                 </div>
             {{/if}}
-            <div class="entry col-md-4 col-md-offset-4">
+
+            <div class="entry">
+
                 {{#if error}}
                     <div class='alert alert-danger'>{{error}}</div>
                 {{/if}}
-                <h3>{{t9n 'forgotPassword'}}</h3>
+
+                <h3>{{Accounts.forgotPassword}}</h3>
                 <form id='forgotPassword'>
                     <div class="form-group">
-                        <input type="email" name="forgottenEmail" class="form-control" placeholder="{{t9n 'emailAddress'}}" value=''>
+                        <input type="email" name="forgottenEmail" class="form-control" placeholder="{{Accounts.emailAddress}}" value=''>
                     </div>
-                    <button type="submit" class="submit btn btn-block btn-danger">{{t9n 'emailResetLink'}}</button>
+                    <button type="submit" class="submit btn btn-block btn-danger">{{Accounts.emailResetLink}}</button>
                 </form>
-                <p class="entry-signup-cta">{{t9n "dontHaveAnAccount"}} <a href="signup">{{t9n "signUp"}}</a></p>
-                <p class="entry-signin-cta">{{t9n "ifYouAlreadyHaveAnAccount"}} <a href="login">{{t9n "signin"}}</a>.</p>
+                <p class="entry-signup-cta">{{Accounts.dontHaveAnAccount}} <a href="signup">{{Accounts.signUp}}</a></p>
+                <p class="entry-signin-cta">{{Accounts.ifYouAlreadyHaveAnAccount}} <a href="login">{{Accounts.signin}}</a>.</p>
 
 
 
@@ -173,27 +186,30 @@
 </template>
 
 <template name="resetPassword">
-    <div class="{{containerCSSClass}}">
+    <div class="accounts-box col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <div class="{{rowCSSClass}}">
             {{#if logo}}
                 <div class="entry-logo">
                     <a href="/"><img src="{{logo}}" alt="logo"></a>
                 </div>
             {{/if}}
-            <div class="entry col-md-4 col-md-offset-4">
+            <div class="entry">
+
                 {{#if error}}
                     <div class='alert alert-danger'>{{error}}</div>
                 {{/if}}
-                <h3>{{t9n 'forgotPassword'}}</h3>
+
+                <h3>{{Accounts.forgotPassword}}</h3>
                 <form id='forgotPassword'>
                     <div class="form-group">
-                        <input type="email" name="forgottenEmail" class="form-control" placeholder="{{t9n 'emailAddress'}}" value=''>
+                        <input type="email" name="forgottenEmail" class="form-control" placeholder="{{Accounts.emailAddress}}" value=''>
                     </div>
-                    <button type="submit" class="btn btn-default">{{t9n 'emailResetLink'}}</button>
+                    <button type="submit" class="btn btn-default">{{Accounts.emailResetLink}}</button>
                 </form>
                 {{#if showSignupCode}}
-                    <p class="entry-signup-cta">{{t9n 'dontHaveAnAccount'}} <a href="signup">{{t9n 'signUp'}}</a></p>
+                    <p class="entry-signup-cta">{{Accounts.dontHaveAnAccount}} <a href="signup">{{Accounts.signUp}}</a></p>
                 {{/if}}
+
                 {{#if talkingToServer}}
                     {{> spinner}}
                 {{/if}}
