--- a/client/styles/admin.css
+++ b/client/styles/admin.css
@@ -24,6 +24,22 @@
 *    1.   Body
 ***********************************************************************/
 
+html,
+body {
+    min-height: 100%;
+}
+.layout-boxed html,
+.layout-boxed body {
+    height: 100%;
+}
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
 
 /***********************************************************************
 *    1.   Header
