--- a/client/partials/footer.html
+++ b/client/partials/footer.html
@@ -1,10 +1,10 @@
-     <template name="footer">
-      <footer class="main-footer">
+<template name="footer">
+    <footer class="main-footer">
         <div class="pull-right hidden-xs">
-          <b>Version</b> 2.3.0
+            <b>Version</b>{{{Accounts.Version}}}
         </div>
         <strong> {{{Config.footer}}} </strong> All rights reserved.
-      </footer>
-     </template>
+    </footer>
+</template>
 
 
