--- a/client/styles/AdminLTE.css
+++ b/client/styles/AdminLTE.css
@@ -10,22 +10,7 @@
  * Core: General Layout Style
  * -------------------------
  */
-html,
-body {
-  min-height: 100%;
-}
-.layout-boxed html,
-.layout-boxed body {
-  height: 100%;
-}
-body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
+
 /* Layout */
 .wrapper {
   min-height: 100%;
@@ -3275,10 +3260,10 @@ table.text-center th {
  * -------------
  */
 .profile-user-img {
-  margin: 0 auto;
-  width: 100px;
-  padding: 3px;
-  border: 3px solid #d2d6de;
+  margin: 30px;
+  width: 150px;
+  height: 150px;
+  border: 3px solid darkslategray;
 }
 .profile-username {
   font-size: 21px;
