--- a/client/views/company.html
+++ b/client/views/company.html
@@ -1,28 +1,8 @@
 <template name="companies">
     <div class="container">
         <div class="row">
-            <div class="page-header">
-                <h1>Companies <small>Database</small></h1>
-            </div>
-            <div class="span-12">
-                <table class="table table-striped table-condensed table-hover table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Company</th>
-                            <th>City</th>
-                            <th>State</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#each company}}
-                        <tr>
-                            <td>{{company}}</td>
-                            <td>{{city}}</td>
-                            <td>{{state}}</td>
-                        </tr>
-                        {{/each}}
-                    </tbody>
-                </table>
+            <div class="profile-user-img pull-left">
+                <img src="{{User.image}}">
             </div>
         </div>
     </div>
