Login with email button working
Now I have to direct to proper route as well as get it to access with
other login services

--- a/client/partials/breadcrumb.html
+++ b/client/partials/breadcrumb.html
@@ -1,6 +1,6 @@
 <template name="breadcrumb">
 	<ol class="breadcrumb">
 		<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-		<li class="active">{{{template.name}}}</li>
+		<li class="active">{{template.name}}</li>
 	</ol>
 </template>
