--- a/client/views/entry/login.html
+++ b/client/views/entry/login.html
@@ -45,8 +45,9 @@
                     {{#unless isUsernameOnly}}
                         <p><a href="forgot">{{Accounts.forgotPassword}}</a></p>
                         <div class="pull-right login-button" id="login-buttons-logout">
-                            <a id="logout" href="login" class="btn btn-default btn-flat">Sign out</a>
+                            <a id="login" type="submit" class="submit btn btn-block btn-default">{{Accounts.signIn}}</a>
                         </div>
+
                         <button id="login" type="submit" class="submit btn btn-block btn-default">{{Accounts.signIn}}</button>
                     {{/unless}}
                 </form>
