--- a/client/partials/footer.html
+++ b/client/partials/footer.html
@@ -1,9 +1,9 @@
 <template name="footer">
     <footer class="main-footer">
         <div class="pull-right hidden-xs">
-            <b>Version</b>{{{Accounts.Version}}}
+            <p>Version {{Config.version}}.</p>
         </div>
-        <strong> {{{Config.footer}}} </strong> All rights reserved.
+        <p>{{Config.footer}} All rights reserved.</p>
     </footer>
 </template>
 
