--- a/client/views/entry/login.html
+++ b/client/views/entry/login.html
@@ -2,11 +2,9 @@
     <div class="accounts-box col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         {{> loginButtons}}
 
-        {{#if logo}}
             <div class="entry-logo">
                 <a href="/"><img src="{{logo}}" alt="logo"></a>
             </div>
-        {{/if}}
 
         <div>
             <h3 class="text-center">{{Accounts.signInAccount}}</h3>
@@ -60,16 +58,20 @@
     </div>
 </template>
 
+
+
+
+
+
 <template name="signup">
     <div class="accounts-box col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <div class="{{rowCSSClass}}">
-            {{#if logo}}
+
                 <div class="entry-logo">
                     <a href="/"><img src="{{logo}}" alt="logo"></a>
                 </div>
-            {{/if}}
 
-            <div class="entry">
+            <div>
                 <h3>{{Accounts.createAccount}}</h3>
                 {{#if otherLoginServices}}
                     <p class="entry-signin-cta">{{Accounts.ifYouAlreadyHaveAnAccount}} <a href="login">{{Accounts.signin}}</a>.</p>
@@ -89,6 +91,7 @@
                 {{else}}
                     <p class="entry-signin-cta">{{Accounts.ifYouAlreadyHaveAnAccount}} <a href="login">{{Accounts.signin}}</a>.</p>
                 {{/if}}
+
                 {{> entryError}}
                 {{#if passwordLoginService}}
                     <form class="entry-form {{Accounts.signupClass}}" id='signUp'>
@@ -98,6 +101,7 @@
                                 <input autofocus name="username" type="string" class="form-control" value='' autocapitalize="none" autocomplete="off" autocorrect="off">
                             </div>
                         {{/if}}
+
                         {{#if showEmail}}
                             <div class="form-group">
                                 <label>{{Accounts.emailAddress}}</label>
@@ -116,7 +120,7 @@
 
                         {{#if showSignupCode}}
                             <div class="form-group">
-                                <label>{{t9n "signupCode"}}</label>
+                                <label>{{signupCode}}</label>
                                 <input name="signupCode" type="string" class="form-control" value='' autocapitalize="none" autocomplete="off" autocorrect="off" >
                             </div>
                         {{/if}}
@@ -125,19 +129,11 @@
                         <button type="submit" class="submit btn btn-block btn-default">{{Accounts.signUp}}</button>
                     </form>
                 {{/if}}
-                {{#if both}}
+
                     <p class="entry-agreement">{{Accounts.clickAgree}}
                         <a href="privacy">{{Accounts.privacyPolicy}}</a> {{Accounts.and}}
                         <a href="terms">{{Accounts.terms}}</a>.
                     </p>
-                {{else}}
-                    {{#unless neither}}
-                        <p class="entry-agreement">{{Accounts.clickAgree}}
-                            {{#if privacyUrl}}<a href="privacy">{{Accounts.privacyPolicy}}</a>.{{/if}}
-                            {{#if termsUrl}}<a href="terms">{{Accounts.terms}}</a>.{{/if}}
-                        </p>
-                    {{/unless}}
-                {{/if}}
 
                 {{#if talkingToServer}}
                     {{> spinner}}
